# ti

./: 1.md  2.md  README.md  index.html  package.json
.github/workflows/: build-guide.md  build.yml  ci.yml  release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
