[package]
name = "ti"
version = "1.0.0"
description = "Tauri Terminal MVP"
authors = [""]
license = ""
repository = ""
edition = "2021"

[lib]
name = "ti_lib"
crate-type = ["staticlib", "cdilb", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
